# var-runner

./: README.md  RUN_REPORT_2026-07-07.md  SPEC.md  pyproject.toml
tests/: test_agenda.py  test_guardrails.py  test_loop.py  test_verify.py
var_runner/: __init__.py  agenda.py  cli.py  guardrails.py  loop.py  verify.py
var_runner/backends/: __init__.py  anthropic.py  base.py  mock.py  ollama.py
