[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "var-runner"
version = "0.1.0"
description = "Model-agnostic runner for the Verified Autonomous Research (VAR) loop"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Amirshayan Hamidin" }]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
var = "var_runner.cli:main"

[tool.setuptools.packages.find]
include = ["var_runner*"]
